Kavitha-Assignment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: 850995548029.dkr.ecr.us-east-1.amazonaws.com/my-reactjs-app:latest  
          ports:
            - containerPort: 80
